@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1580 Optimize getNumNonZeroElements() (ssc)
+  
   MAHOUT-1464: Cooccurrence Analysis on Spark (pat)
 
   MAHOUT-1578: Optimizations in matrix serialization (ssc)
